improved packaging settings
- Shipping tests without installing them.
- Bumped version.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,6 @@
-include README.md LICENSE
-recursive-include googlytics *.py *.html
+include README.md
+include LICENSE
+include *.sh
+recursive-include googlytics *
+recursive-include tests *
+recursive-exclude * *.pyc
